# stock_ai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  pyproject.toml
configs/: README.md
configs/backtest/: default.yaml
configs/data/: sources.yaml  universe.yaml
configs/features/: feature_set_baseline.yaml  labels.yaml
configs/inference/: default.yaml
configs/train/: baseline_lightgbm.yaml  baseline_logreg.yaml
docs/: architecture.md  requirements.md  tasks.md
scripts/: run_workflow.sh
src/stock_ai/: __init__.py  __main__.py  main.py
src/stock_ai/backtest/: commands.py  run.py
src/stock_ai/data/: __init__.py  commands.py  fundamentals.py  market.py  normalize.py  prices.py  universe.py
src/stock_ai/evaluation/: __init__.py
src/stock_ai/features/: __init__.py  commands.py  dataset.py  labels.py
src/stock_ai/inference/: commands.py  predict.py
src/stock_ai/modeling/: __init__.py  commands.py  train.py
src/stock_ai/reporting/: commands.py  compare.py  prediction_eval.py
src/stock_ai/utils/: __init__.py  config.py  io.py
src/stock_ai/web/: __init__.py  app.py
